# Colyni

./: .gitignore  README.md
colyni/: README.md  preloadguide.md  quickstart.md
colyni/backend/: .env.example  database.py  ledger.py  main.py  requirements.txt
colyni/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
colyni/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
colyni/frontend/src/components/: animated-number.tsx  easy-steps-card.tsx  globe-demo.tsx  role-banner.tsx
colyni/frontend/src/hooks/: use-favorite-model-ids.ts  use-ledger-health.ts  use-machine-role.ts
colyni/frontend/src/lib/: api.ts  chat-errors.ts  cluster-model-readiness.ts  copy-to-clipboard.ts  favorite-models.ts  invite-link.ts  theme.tsx  (+1 more)
colyni/inference/: .gitignore  Cargo.toml  NOTICE  flake.nix  justfile  pyproject.toml
colyni/inference/bench/: eval_tool_calls.py  exo_bench.py  exo_eval.py  harness.py  parallel_requests.py
colyni/inference/python/: parts.nix
colyni/inference/rust/: parts.nix
colyni/inference/rust/colyni_pyo3_bindings/: Cargo.toml  pyproject.toml
colyni/inference/rust/colyni_pyo3_bindings/src/: lib.rs
colyni/inference/rust/colyni_pyo3_bindings/tests/: test_python.py
colyni/inference/tests/: headless_runner.py
colyni/scripts/: build-cluster-ui.sh  demo-3-macs.sh  demo-contributor.sh  demo-coordinator.sh  demo-model-allowlist.sh  detect-lan-ip.sh  dev.sh  download-model-hf-to-colyni.py  place-cluster-model.sh  prefetch-demo-trio.sh  prefetch-model-downloads.py  setup.sh
prompts/: brandguide.md  plan.md
(+152 files in other folders)
